name:                tl-pers-sqlite
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/odr/tl#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           BSD3
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TL.Pers.Sqlite.Sqlite
  build-depends:       base >= 4.7 && < 5
                        , exceptions
                        , text
                        , bytestring
                        , direct-sqlite
                        , text-format
                        , transformers
                        , microlens
                        , ghc-prim
                        , tl-base
                        , tl-pers
  default-language:    Haskell2010

-- executable tl-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , tl
--   default-language:    Haskell2010

test-suite tl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tl-pers-sqlite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/tl
